Update Unit Tests, Integration Tests and Failsafe plugin.